--- a/AppBase/appsettings.json
+++ b/AppBase/appsettings.json
@@ -5,10 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",  
-  "SridSettings": {
-    "DefaultSourceSrid": 4326,
-    "TargetSrid": 4326
-  }
+  "AllowedHosts": "*"
 }
 
