--- a/k8s/k8s_prometheus.yml
+++ b/k8s/k8s_prometheus.yml
@@ -58,7 +58,7 @@ data:
           - role: pod
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_label_app]
-            regex: appbaseapp
+            regex: appbase
             action: keep
           - source_labels: [__meta_kubernetes_pod_container_port_number]
             regex: 8080
