Setup local images for k8s_backend.yml

--- a/k8s/k8s_backend.yml
+++ b/k8s/k8s_backend.yml
@@ -40,7 +40,8 @@ spec:
                   key: POSTGRES_PASSWORD
       containers:
         - name: appbase
-          image: arangelcu/appbase:latest
+          image: appbase:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 8080
           env:
